Feat: Add all tables in database